@@ -12,6 +12,9 @@ An easy way to find out all routing paths in Spring annotated controllers.
 	<version>0.4.0</version>
 </dependency>
 ```
+#Important
+Since v0.4.0, @GetMapping, @PostMapping, @DeleteMapping, @PutMapping, @PatchMapping are supported.
+Before v0.4.0, this library only reads the url inside @RequestMapping(value="/path"), but leaves the url inside @RequestMapping(path="/path") unread, it has been fixed after v0.4.0.
 
 #Quick Start
 ```java
