@@ -13,3 +13,5 @@ Version 0.3.0
 
 Version 0.4.0
 - Remove RubyCollect4J dependency
+* Fix the bug of reading the path from path() instead of value()
++ Add support for @GetMapping, @PostMapping, @DeleteMapping, @PutMapping, @PatchMapping
